Add proof-of-concept singleton page

--- a/index.html
+++ b/index.html
@@ -1,16 +1,144 @@
-<style>
-	textarea {
-		width: 100%;
-	}
-</style>
+<html>
+	<head>
+		<title>JavaScript SHA256 demo</title>
+		<style>
+			body {
+				font-family: Arial, sans-serif;
+				font-size: 16px;
 
-<textarea id="input">abc</textarea>
-<input id="button" type="button" value="calculate" />
-<textarea id="output"></textarea>
+				background-color: #EEE;
+				color: #222;
+				margin: 0;
+				padding: 0;
+			}
+			
+			#content {
+				width: 900px;
+				margin: auto;
+				background-color: #E8E8E8;
+				padding: 1em;
+			}
+			
+			h1 {
+				font-size: 1.4em;
+				text-align: center;
+			}
+		
+			textarea {
+				width: 100%;
+				font-size: inherit;
+				border-radius: 3px;
+				padding: 0.3em;
+			}
+			#button {
+				width: 100%;
+				font-size: 0.8em;
+				line-height: 2em;
+			}
+			
+			pre {
+				margin: 1em;
+				padding: 1em;
+				font-size: 12px;
+				background-color: #FFF;
+				border: 1px solid #BBB;
+				border-radius: 5px;
+			}
+		</style>
+	</head>
+	<body>
+		<div id="content">
+			<h1>JavaScript SHA-256 demo</h1>
 
-<script src="index.js"></script>
-<script>
-	document.getElementById('button').onclick = function () {
-		document.getElementById('output').value = sha256(document.getElementById('input').value);
+			<p>This is a JavaScript implementation of SHA-256, aiming to be as small as I can make it - the minified version is <a href="sha256.min.js">only a kilobyte</a>.<p>
+			<p>It only supports ASCII, so if you need to hash Unicode text you'll need to write a decoder.</p>
+			
+			<script src="sha256.js"></script>
+			<textarea id="input" rows=5>abc</textarea>
+			<input id="button" type="button" value="calculate" />
+			<textarea id="output" rows=1 style="text-align: center"></textarea>
+
+			<script>
+				document.getElementById('button').onclick = function () {
+					document.getElementById('output').value = sha256(document.getElementById('input').value);
+				};
+			</script>
+			
+			<pre><code>function sha256(ascii) {
+	var maxWord = 0xffffffff;
+	var rightRotate = function(value, amount) {
+		return (value>>>amount) | (value&lt;&lt;(32 - amount));
 	};
-</script>
+	function constants(N, pow) {
+		var primes = [], result = [];
+		var candidate = 2;
+		while (primes.length &lt; N) {
+			for (var i = 0; i &lt; primes.length; i++) {
+				if (!(candidate%primes[i])) {
+					i = -1;
+					candidate++;
+				}
+			}
+			result.push((Math.pow(candidate, pow)*(maxWord+1))|0);
+			primes.push(candidate++);
+		}
+		return result;
+	}
+	// Initial hash value: first 32 bits of the fractional parts of the square roots of the first 8 primes
+	var hash = (sha256.h = sha256.h || constants(8, 1/2)).slice(0);
+	// Round constants: first 32 bits of the fractional parts of the cube roots of the first 64 primes
+	var k = (sha256.k = sha256.k || constants(64, 1/3));
+	
+	var words = [];
+	var asciiLength = ascii.length*8;
+	ascii += &#39\x80&#39; // Append &#391&#39 bit (plus zero padding)
+	while (ascii.length%64 - 56) ascii += &#39\x00&#39; // More zero padding
+	while (ascii) {
+		var charCode = ascii.charCodeAt.bind(ascii);
+		words.push(((charCode(0)*256 + charCode(1))*256 + charCode(2))*256 + charCode(3));
+		ascii = ascii.substring(4);
+	}
+	words.push((asciiLength/(maxWord + 1))&maxWord);
+	words.push(asciiLength&maxWord)
+	
+	// process each chunk
+	while (words.length) {
+		var w = words.splice(0, 16);
+		// Expand the message into 64 words
+		for (var i = 16; i &lt; 64; i++) {
+			var w15 = w[i - 15], w2 = w[i - 2];
+			var s0 = rightRotate(w15, 7) ^ rightRotate(w15, 18) ^ (w15>>>3);
+			var s1 = rightRotate(w2, 17) ^ rightRotate(w2, 19) ^ (w2>>>10);
+			w[i] = (w[i - 16] + s0 + w[i - 7] + s1)|0;
+		}
+		
+		var working = hash.slice(0);
+		for (var i = 0; i &lt; 64; i++) {
+			var a = working[0], e = working[4];
+			var s1 = rightRotate(e, 6) ^ rightRotate(e, 11) ^ rightRotate(e, 25);
+			var ch = (e&working[5])^((~e)&working[6]);
+			var temp1 = working[7] + s1 + ch + k[i] + w[i]
+			var s0 = rightRotate(a, 2) ^ rightRotate(a, 13) ^ rightRotate(a, 22);
+			var maj = (a&working[1])^(a&working[2])^(working[1]&working[2]);
+			var temp2 = s0 + maj;
+			
+			working = [(temp1 + temp2)|0].concat(working); // We don&#39t bother trimming off the extra ones, they&#39re harmless
+			working[4] = (working[4] + temp1)|0;
+		}
+		
+		for (var i = 0; i &lt; 8; i++) {
+			hash[i] = (hash[i] + working[i])|0;
+		}
+	}
+	
+	var hex = function (b) {
+		b = (b&255);
+		return ((b &lt; 16) ? &#390&#39 : &#39&#39) + b.toString(16);
+	};
+	return hash.map(function (word) {
+		return hex(word>>24) + hex(word>>16) + hex(word>>8) + hex(word);
+	}).join(&#39&#39);
+}</code></pre>
+		</div>		
+	</body>
+</html>
