Singleton is now a singleton-generating app (pulling code from Gist)

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<p>This is a JavaScript implementation of SHA-256, aiming to be as small as I can make it - the minified version is <a href="sha256.min.js">only a kilobyte</a>.<p>
 			<p>It only supports ASCII, so if you need to hash Unicode text you'll need to write a decoder.</p>
 			
-			<script src="sha256.js"></script>
+			<script src="sha256.min.js"></script>
 			<textarea id="input" rows=5>abc</textarea>
 			<input id="button" type="button" value="calculate" />
 			<textarea id="output" rows=1 style="text-align: center"></textarea>
