--- a/index.html
+++ b/index.html
@@ -66,14 +66,16 @@
 			
 			<pre><code>function sha256(ascii) {
 	var maxWord = 0xffffffff;
+	var lengthProperty = &#39length&#39;
+	
 	var rightRotate = function(value, amount) {
 		return (value>>>amount) | (value&lt;&lt;(32 - amount));
 	};
 	function constants(N, root) {
 		var primes = [], result = [];
 		var candidate = 2;
-		while (primes.length &lt; N) {
-			for (var i = 0; i &lt; primes.length; i++) {
+		while (primes[lengthProperty] &lt; N) {
+			for (var i = 0; i &lt; primes[lengthProperty]; i++) {
 				if (!(candidate%primes[i])) {
 					i = -1;
 					candidate++;
@@ -90,9 +92,9 @@
 	var k = (sha256.k = sha256.k || constants(64, 3));
 	
 	var words = [];
-	var asciiLength = ascii.length*8;
+	var asciiLength = ascii[lengthProperty]*8;
 	ascii += &#39\x80&#39; // Append &#391&#39 bit (plus zero padding)
-	while (ascii.length%64 - 56) ascii += &#39\x00&#39; // More zero padding
+	while (ascii[lengthProperty]%64 - 56) ascii += &#39\x00&#39; // More zero padding
 	while (ascii) {
 		var charCode = ascii.charCodeAt.bind(ascii);
 		words.push(((charCode(0)*256 + charCode(1))*256 + charCode(2))*256 + charCode(3));
@@ -102,7 +104,7 @@
 	words.push(asciiLength&maxWord)
 	
 	// process each chunk
-	while (words.length) {
+	while (words[lengthProperty]) {
 		var w = words.splice(0, 16);
 		// Expand the message into 64 words
 		for (var i = 16; i &lt; 64; i++) {
@@ -132,7 +134,7 @@
 	}
 	
 	var result = &#39&#39;
-	for (var i = 0; i &lt; hash.length; i++) {
+	for (var i = 0; i &lt; hash[lengthProperty]; i++) {
 		for (var j = 24; j >= 0; j -= 8) {
 			var b = (hash[i]>>j)&255;
 			result += ((b &lt; 16) ? &#390&#39 : &#39&#39) + b.toString(16);
