--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
 		var working = hash.slice(0);
 		for (i = 0; i &lt; 64; i++) {
 			var a = working[0], e = working[4];
-			var s1 = rightRotate(e, 6) ^ rightRotate(e, 11) ^ rightRotate(e, 25);
-			var ch = (e&working[5])^((~e)&working[6]);
-			var temp1 = working[7] + s1 + ch + k[i] + w[i]
-			var s0 = rightRotate(a, 2) ^ rightRotate(a, 13) ^ rightRotate(a, 22);
-			var maj = (a&working[1])^(a&working[2])^(working[1]&working[2]);
-			var temp2 = s0 + maj;
+			var temp1 = working[7]
+				+ (rightRotate(e, 6) ^ rightRotate(e, 11) ^ rightRotate(e, 25))
+				+ ((e&working[5])^((~e)&working[6]))
+				+ k[i] + w[i]
+			var temp2 = (rightRotate(a, 2) ^ rightRotate(a, 13) ^ rightRotate(a, 22))
+				+ ((a&working[1])^(a&working[2])^(working[1]&working[2]));
 			
 			working = [(temp1 + temp2)|0].concat(working); // We don&#39t bother trimming off the extra ones, they&#39re harmless
 			working[4] = (working[4] + temp1)|0;
