--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
 	var k = (sha256.k = sha256.k || constants(64, 3));
 	
 	var words = [];
-	var asciiLength = ascii[lengthProperty]*8;
+	var asciiLength = ascii[lengthProperty]*8, charCode;
 	ascii += &#39\x80&#39; // Append &#391&#39 bit (plus zero padding)
 	while (ascii[lengthProperty]%64 - 56) ascii += &#39\x00&#39; // More zero padding
 	while (ascii) {
-		var charCode = ascii.charCodeAt.bind(ascii);
+		charCode = ascii.charCodeAt.bind(ascii);
 		words.push(((charCode(0)*256 + charCode(1))*256 + charCode(2))*256 + charCode(3));
 		ascii = ascii.substring(4);
 	}
@@ -107,6 +107,7 @@
 	// process each chunk
 	while (words[lengthProperty]) {
 		var w = words.splice(0, 16);
+		var working = hash.slice(0);
 		// Expand the message into 64 words
 		for (i = 16; i &lt; 64; i++) {
 			var w15 = w[i - 15], w2 = w[i - 2];
@@ -115,7 +116,6 @@
 			w[i] = (w[i - 16] + s0 + w[i - 7] + s1)|0;
 		}
 		
-		var working = hash.slice(0);
 		for (i = 0; i &lt; 64; i++) {
 			var a = working[0], e = working[4];
 			var temp1 = working[7]
@@ -134,9 +134,9 @@
 		}
 	}
 	
-	var result = &#39&#39;
+	var result = &#39&#39, j;
 	for (i = 0; i &lt; hash[lengthProperty]; i++) {
-		for (var j = 24; j >= 0; j -= 8) {
+		for (j = 24; j >= 0; j -= 8) {
 			var b = (hash[i]>>j)&255;
 			result += ((b &lt; 16) ? &#390&#39 : &#39&#39) + b.toString(16);
 		}
