Use anonymous function with name (has scope inside function) to reduce cost of caching constants

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				};
 			</script>
 			
-			<pre><code>function sha256(ascii) {
+			<pre><code>var sha256 = function sha256(ascii) { // The double declaration lets the function be renamed inside the scope, so caching constants is less expensive
 	var maxWord = 0xffffffff;
 	var lengthProperty = &#39length&#39;
 	var i; // Used as a counter across the whole file;
@@ -142,7 +142,7 @@
 		}
 	}
 	return result;
-}</code></pre>
+};</code></pre>
 		</div>		
 	</body>
 </html>
