--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			
 			<pre><code>var sha256 = function sha256(ascii) {
 	var maxWord = 0x100000000;
-	var lengthProperty = &#39length&#39;
+	var lengthProperty = &#39length&#39, pushProperty = &#39push&#39;
 	var i; // Used as a counter across the whole file;
 	
 	var rightRotate = function(value, amount) {
@@ -88,9 +88,9 @@
 				candidate++;
 			}
 		}
-		hash.push((mathPow(candidate, .5)*maxWord)|0);
-		k.push((mathPow(candidate, 1/3)*maxWord)|0);
-		primes.push(candidate++);
+		hash[pushProperty]((mathPow(candidate, .5)*maxWord)|0);
+		k[pushProperty]((mathPow(candidate, 1/3)*maxWord)|0);
+		primes[pushProperty](candidate++);
 	}
 	hash = hash.slice(0);
 	
@@ -100,11 +100,11 @@
 	while (ascii[lengthProperty]%64 - 56) ascii += &#39\x00&#39; // More zero padding
 	while (ascii) {
 		charCode = ascii.charCodeAt.bind(ascii);
-		words.push(((charCode(0)*256 + charCode(1))*256 + charCode(2))*256 + charCode(3));
+		words[pushProperty](((charCode(0)*256 + charCode(1))*256 + charCode(2))*256 + charCode(3));
 		ascii = ascii.substring(4);
 	}
-	words.push((asciiLength/maxWord)|0);
-	words.push(asciiLength|0)
+	words[pushProperty]((asciiLength/maxWord)|0);
+	words[pushProperty](asciiLength|0)
 	
 	// process each chunk
 	while (words[lengthProperty]) {
