Tweak prime-calcuation a bit

--- a/index.html
+++ b/index.html
@@ -82,9 +82,11 @@
 	var primes = [], mathPow = Math.pow;
 	var candidate = 2;
 	while (k[lengthProperty] &lt; 64) {
-		for (i = 0; i &lt; primes[lengthProperty]; i++) {
-			if (!(candidate%primes[i])) {
-				i = -1;
+		i = 0;
+		while (i &lt; primes[lengthProperty]) {
+			if (!(candidate%primes[i++])) {
+				// candidate is composite - increase the candidate and reset the prime-comparison counter
+				i = 0;
 				candidate++;
 			}
 		}
