--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
 		return (value>>>amount) | (value&lt;&lt;(32 - amount));
 	};
 	
-	var maxWord = 0x100000000;
+	var mathPow = Math.pow;
+	var maxWord = mathPow(2, 32);
 	var lengthProperty = &#39length&#39, pushProperty = &#39push&#39;
 	var i, j; // Used as a counter across the whole file
 	var result = &#39&#39;
@@ -83,32 +84,27 @@
 	var hash = sha256.h = sha256.h || [];
 	// Round constants: first 32 bits of the fractional parts of the cube roots of the first 64 primes
 	var k = sha256.k = sha256.k || [];
+	var primeCounter = k[lengthProperty];
 	/*/
 	var hash = [], k = [];
+	var primeCounter = 0;
 	//*/
 
-	var primes = [], mathPow = Math.pow;
-	var candidate = 2; // Our current candidate that we think might be a prime
-	while (k[lengthProperty] &lt; 64) {
-		i = 0;
-		while (i &lt; primes[lengthProperty]) {
-			if (!(candidate%primes[i++])) {
-				// candidate is composite - increase the candidate and reset the prime-comparison counter
-				i = 0;
-				candidate++;
+	var isComposite = {};
+	for (var candidate = 2; primeCounter &lt; 64; candidate++) {
+		if (!isComposite[candidate]) {
+			for (i = 0; i &lt; 313; i += candidate) {
+				isComposite[i] = candidate;
 			}
+			hash[primeCounter] = (mathPow(candidate, .5)*maxWord)|0;
+			k[primeCounter++] = (mathPow(candidate, 1/3)*maxWord)|0;
 		}
-		hash[pushProperty]((mathPow(candidate, .5)*maxWord)|0);
-		k[pushProperty]((mathPow(candidate, 1/3)*maxWord)|0);
-		primes[pushProperty](candidate++);
 	}
 	
 	ascii += &#39\x80&#39; // Append &#391&#39 bit (plus zero padding)
 	while (ascii[lengthProperty]%64 - 56) ascii += &#39\x00&#39; // More zero padding
-	while (ascii) {
-		charCode = ascii.charCodeAt.bind(ascii);
-		words[pushProperty](((charCode(0)*256 + charCode(1))*256 + charCode(2))*256 + charCode(3));
-		ascii = ascii.substring(4);
+	for (i = 0; i &lt; ascii[lengthProperty]; i++) {
+		words[i>>2] |= ascii.charCodeAt(i) &lt;&lt; ((3 - i)%4)*8;
 	}
 	words[pushProperty]((asciiLength/maxWord)|0);
 	words[pushProperty](asciiLength|0)
