Remove extra variable

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 	var result = &#39&#39;
 
 	var words = [];
-	var asciiLength = ascii[lengthProperty]*8, charCode;
+	var asciiLength = ascii[lengthProperty]*8;
 	
 	//* caching results is optional - remove/add slash from front of this line to toggle
 	// Initial hash value: first 32 bits of the fractional parts of the square roots of the first 8 primes
