Fixed performance issue with large inputs

--- a/index.html
+++ b/index.html
@@ -116,14 +116,16 @@
 	words[pushProperty](asciiLength|0)
 	
 	// process each chunk
-	while (words[lengthProperty]) {
-		var w = words.splice(0, 16); // The message is expanded into 64 words as part of the iteration
+	j = 0;
+	while (j &lt; words[lengthProperty]) {
+		var w = words.slice(j, j += 16); // The message is expanded into 64 words as part of the iteration
 		var oldHash = hash;
 		// This is now the undefinedworking hash&quot, often labelled as variables a...g
 		// (we have to truncate as well, otherwise extra entries at the end accumulate
 		hash = hash.slice(0, 8);
 		
 		for (i = 0; i &lt; 64; i++) {
+			var i2 = i + j;
 			// Expand the message into 64 words
 			// Used below if 
 			var w15 = w[i - 15], w2 = w[i - 2];
@@ -162,7 +164,8 @@
 		}
 	}
 	return result;
-};</code></pre>
+};
+</code></pre>
 		</div>		
 	</body>
 </html>
