--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 	
 	var mathPow = Math.pow;
 	var maxWord = mathPow(2, 32);
-	var lengthProperty = &#39length&#39, pushProperty = &#39push&#39;
+	var lengthProperty = &#39length&#39;
 	var i, j; // Used as a counter across the whole file
 	var result = &#39&#39;
 
@@ -112,8 +112,8 @@
 		if (j>>8) return; // ASCII check: only accept characters in range 0-255
 		words[i>>2] |= j &lt;&lt; ((3 - i)%4)*8;
 	}
-	words[pushProperty]((asciiBitLength/maxWord)|0);
-	words[pushProperty](asciiBitLength)
+	words[words[lengthProperty]] = ((asciiBitLength/maxWord)|0);
+	words[words[lengthProperty]] = (asciiBitLength)
 	
 	// process each chunk
 	for (j = 0; j &lt; words[lengthProperty];) {
